2006-12-14  Google Inc.  <opensource@google.com>

	* Version 0.6
	* Released as http://ajaxslt.googlecode.com/svn/tags/release-0-6/
	* Fixes infinite loops in evaluation of XPath axes "ancestor",
	  "ancestor-or-self", "preceding-sibling", "following-sibling".
	* Fixes evaluation of XPath axes "preceding", "following".
	* Added unittests for both.

2006-09-10  Google Inc. <opensource@google.com>

	* Version 0.5
	* Released on http://code.google.com/hosting/
	* General changes:
	  - remove all uses of for-in iteration
	  - rename misc.js to util.js
	  - log window is now in simplelog.js
	* XPath changes:
	  - fixed id() function
	  - fixed UnionExpr::evaluate()
	  - added support for Unicode chracters
	* XSLT changes:
	  - fixed xsl:sort in xsl:for-each (again)
	* DOM changes:
	  - added a few methods
	* XML parser changes:
	  - parses CDATA sections
	  - parses comments
	  - parses XML declaration
	  - parses Unicode XML markup
	* Test changes:
	  - added several jsunit tests

2005-10-19  Google Inc. <opensource@google.com>

	* Version 0.4
	* XPath changes:
	  - Optimize parsing of very common and simple expressions.
	  - Fix use of XPath operator names -- div, mod, and, or -- 
	    as node names in abbreviated step expressions.
	  - Fix root node -- it is now set to ownerDocument.
	* XSLT changes: 
	  - Fix xsl:sort in xsl:for-each.
	* DOM changes:
	  - Add replaceChild(), insertBefore(), removeChild().
	    These are still not needed in XSLT processing, but 
	    in another client of the DOM implementation.
	  - DOM nodes are recycled instead of garbage collected, 
	    in order to improve performance in some browsers.
	* Test changes:
	  - Add many more test cases to the XPath tests.
	  - Add a note mentioning jsunit in the README.
	  - Add a DOM unittest file.
	
2005-08-27  Google Inc. <opensource@google.com>

	* Version 0.3 (not released on sourceforge)
	* XPath changes:
	  - Fix implementation of the * node test.